--- a/p1.html
+++ b/p1.html
@@ -1,37 +1,1 @@
-Program:
-
-<!DOCTYPE html>
-
-<head> <title>Javascript Program </title></head>
-
-<body>
-
-<h1>use of switch case </h1> <script type="text/javascript"> var day-6.
-
-switch(day)
-
-1 case 1: alert("Monday"); break: case 2: alert("Tuesday"); break case 3: alert("Wednesday"); break; case 4:alert("Thursday"); break: case 5: alert("Friday"); break: case 6: alert("Saturday"); break; case 7: alert("Sunday")
-
-use of switch case
-
-Note: 'language' attribute of Script> is replaced by 'type' attribute in all the programs as it is standardised.
-
-3.2.2 Looping Statement
-
-While creating programming logic. we need to execute some statements repeatedly Iteration refers to the execution of statement or a group of statements of code for a fixed number of times or till the condition is satisfied. The condition should be boolean condition. Some commonly used JavaScript looping
-
-statements are:
-
-1. for.......loop
-
-This loop executes statements as long as condition becomes true, control comes out from the loop when condition becomes false. Benefit of for-loop is that it combines initialization, condition and loop iteration (increment or decrement) in single statement.
-
-Syntax:
-
-break:
-
-default: alert("Invalid day");
-
-}
-
-</script></body></html>
+<p> Lu*nd lele behen/bhai </p>
